Tentativa de acerto para slide show. Assim como a inclusao das imagens.

--- a/samatva/Portal do Verde.html
+++ b/samatva/Portal do Verde.html
@@ -45,13 +45,36 @@
 THE ACTUAL ORBIT SLIDER CONTENT 
 
 ======================================= -->
-		<div class="orbit-wrapper" style="width: 1260px; height: 529px;"><div id="featured" class="orbit" style="width: 1260px; height: 529px;"> 
+		<div class="orbit-wrapper" style="width: 1260px; height: 529px;">
+                    <div id="featured" class="orbit" style="width: 1260px; height: 529px;"> 
 			<a href="http://www.samatva.com.br/v2/yoga_metodo.html" target="_top" style="z-index: 1; display: block; opacity: 1;"><img src="./Portal do Verde_files/banner_yoga.jpg"></a>
 			<a href="http://www.samatva.com.br/v2/ayurveda_terapias.html" target="_top" style="display: block; opacity: 1; z-index: 1;"><img src="./Portal do Verde_files/banner_ayurveda.jpg"></a>
             <a href="http://www.samatva.com.br/v2/naturologia_terapias.html" target="_top" style="display: block; opacity: 1; z-index: 1;"><img src="./Portal do Verde_files/banner_naturologia.jpg"></a>
 			<a href="http://samatvario.blogspot.com.br/" target="_blank" style="display: block; opacity: 1; z-index: 3;"><img src="./Portal do Verde_files/banner_blog.jpg"></a>
 
-		</div><div class="timer"><span class="mask"><span class="rotator" style="-webkit-transform: rotate(112deg);"></span></span><span class="pause"></span></div><div class="orbit-caption"></div><ul class="orbit-bullets"><li class=""><a href="http://www.samatva.com.br/v2/slideshow/slideshow.html#">1</a></li><li class=""><a href="http://www.samatva.com.br/v2/slideshow/slideshow.html#">2</a></li><li class=""><a href="http://www.samatva.com.br/v2/slideshow/slideshow.html#">3</a></li><li class="active"><a href="http://www.samatva.com.br/v2/slideshow/slideshow.html#">4</a></li></ul></div>
+                    </div>
+                    <div class="timer">
+                        <span class="mask">
+                            <span class="rotator" style="-webkit-transform: rotate(112deg);"></span>
+                        </span>
+                        <span class="pause"></span>
+                    </div>
+                    <div class="orbit-caption"></div>
+                    <ul class="orbit-bullets">
+                        <li class="">
+                            <a href="http://www.samatva.com.br/v2/slideshow/slideshow.html#">1</a>
+                        </li>
+                        <li class="">
+                            <a href="http://www.samatva.com.br/v2/slideshow/slideshow.html#">2</a>
+                        </li>
+                        <li class="">
+                            <a href="http://www.samatva.com.br/v2/slideshow/slideshow.html#">3</a>
+                        </li>
+                        <li class="active">
+                            <a href="http://www.samatva.com.br/v2/slideshow/slideshow.html#">4</a>
+                        </li>
+                    </ul>
+                </div>
 		<!-- Captions for Orbit
 		<span class="orbit-caption" id="htmlCaption"><strong>I'm A Badass Caption:</strong> I can haz <a href="#">links</a>, <em>style</em> or anything that is valid markup :)</span> -->
 		
