Acerto da página do agenda e incluso algumas imagems. Corrigido, inclusive, o framework do orbit e images.

--- a/lib/PHPMailer/_lib/_tpl/error.html
+++ b/lib/PHPMailer/_lib/_tpl/error.html
@@ -5,7 +5,7 @@
 <title>Form Submission Failed</title>
 <style>
 body {
-  #background-color: #022a57;
+  //background-color: #022a57;
   background-color: #FFFFFF;
   margin-left: 0px;
   margin-top: 5px;
